[package]
name = "stainless-crypto"
version = "0.1.0"
authors = ["Matheus Xavier <mxavier@bpmx.io>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["dylib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.8.1"
anyhow = "1.0.26"
hex = "0.4.2"
sha2 = "0.8.1"
generic-array = "0.13.2"

[dev-dependencies]
sha2 = "0.8.1"